--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "rc-util": "^5.22.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-rnd": "^10.3.7"
+    "react-rnd": "^10.3.7",
+    "valtio": "^1.7.6"
   },
   "devDependencies": {
     "@iceworks/spec": "^1.6.0",
@@ -25,6 +26,8 @@
     "build-plugin-ignore-style": "^0.1.2",
     "build-plugin-moment-locales": "^0.1.3",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-valtio": "^0.6.1",
     "ice.js": "^2.6.6",
     "stylelint": "^14.0.0",
     "stylelint-config-recommended-less": "^1.0.4"
