新增评审tool中人员的提示&联系方式功能

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ahooks": "^3.7.2",
     "antd": "^4.23.6",
     "dayjs": "^1.11.6",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "rc-trigger": "^5.0.4",
     "rc-util": "^5.22.5",
